--- a/ROOT/design_and_consultation.html
+++ b/ROOT/design_and_consultation.html
@@ -89,7 +89,38 @@
     <section class="inner-page">
       <div class="container">
         <p>
-          Example inner page template
+          <h1>Expert Solar Design and Consultation Services in California</h1>
+<p>Welcome to California Solar Group, your trusted partner for professional solar design and consultation services in California. Our dedicated team of solar experts is committed to helping you harness the power of the sun and maximize your energy savings. With our comprehensive design and consultation services, we ensure that your solar system is tailor-made to meet your specific requirements. Discover how our expertise can transform your energy consumption and lower your carbon footprint.</p>
+
+<h2>Why Choose California Solar Group for Solar Design and Consultation?</h2>
+
+<ol>
+  <li>
+    <strong>Personalized Approach:</strong>
+    <p>At California Solar Group, we believe that every solar project is unique. Our experienced consultants work closely with you to understand your energy goals, budget, and site specifications. We then design a solar system that maximizes efficiency and delivers optimal performance for your property.</p>
+  </li>
+  <li>
+    <strong>Extensive Experience:</strong>
+    <p>With years of experience in the solar industry, our team has successfully completed numerous projects across California. We stay up-to-date with the latest industry trends and regulations, ensuring that our designs comply with all local and state requirements. Trust us to handle every aspect of your solar design and consultation with precision and expertise.</p>
+  </li>
+  <li>
+    <strong>Cutting-Edge Technology:</strong>
+    <p>We utilize advanced software and tools to create accurate solar designs and performance projections. Our team stays at the forefront of solar technology advancements, enabling us to recommend the most efficient and reliable components for your system. Rest assured, we deliver top-of-the-line solutions that maximize your return on investment.</p>
+  </li>
+  <li>
+    <strong>Cost-Effective Solutions:</strong>
+    <p>At California Solar Group, we understand the importance of cost-effectiveness. Our team meticulously analyzes your energy consumption patterns and financial goals to design a solar system that offers the best long-term savings. We strive to provide you with an optimal balance between upfront costs and long-term benefits.</p>
+  </li>
+  <li>
+    <strong>Seamless Project Execution:</strong>
+    <p>From the initial consultation to the final installation, our team ensures a smooth and hassle-free experience. We handle all the necessary permits, paperwork, and coordination with utility companies, so you can sit back and relax while we bring your solar vision to life.</p>
+  </li>
+</ol>
+
+<h3>Contact California Solar Group Today!</h3>
+
+<p>Ready to take the first step towards a greener future? Contact California Solar Group today to schedule a consultation with our solar design and consultation experts. We are dedicated to helping you make informed decisions and guiding you through every stage of the solar adoption process. Let us design a solar system that maximizes your energy savings and contributes to a sustainable tomorrow.</p>
+
         </p>
       </div>
     </section>
