--- a/ROOT/design_and_consultation.html
+++ b/ROOT/design_and_consultation.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Inner Page</h2>
+          <h2>Design and Consultation</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Inner Page</li>
+            <li>Design and Consultation</li>
           </ol>
         </div>
 
