--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -128,31 +128,19 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="design_and_consultation.html">Design and Consultation</a></h3>
+            <h3><a href="">100% Electricity Bill Offset</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
-            <h3><a href="">Installation and Maintenance</a></h3>
+            <h3><a href="">30% Tax Credit</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">Financing and Incentives</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-dashboard-3-line"></i>
-            <h3><a href="">Monitoring and Optimization</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4">
-          <div class="icon-box">
-            <i class="ri-database-2-line"></i>
-            <h3><a href="">Education and Outreach</a></h3>
+            <h3><a href="">3-4% Increased Home Value</a></h3>
           </div>
         </div>
       </div>
@@ -282,7 +270,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Solar System Design</a></h4>
+              <h4><a href="design_and_consultation.html">Solar System Design</a></h4>
               <p>
                 The company's team of engineers and designers develop detailed solar system designs, ensuring that the system meets both the customer's energy needs and local building regulations. The design process includes component selection, layout planning, and shading analysis to maximize system performance.
               </p>
