--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -128,7 +128,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="">100% Electricity Bill Offset</a></h3>
+            <h3><a href="electricity_bill_offset.html">100% Electricity Bill Offset</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4">
