--- a/ROOT/electricity_bill_offset.html
+++ b/ROOT/electricity_bill_offset.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Design and Consultation</h2>
+          <h2>Electricity Bill Offset</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Design and Consultation</li>
+            <li>Electricity Bill Offset</li>
           </ol>
         </div>
 
