--- a/ROOT/tax_credit.html
+++ b/ROOT/tax_credit.html
@@ -93,15 +93,15 @@
 
            <h2 class="mb-3">Take Advantage of the 30% Tax Credit with Solar Installations in California</h2>
 
-           <p class="lead">Are you a homeowner or business owner in California looking to harness the power of solar energy while saving money? Look no further! At [Company Name], we offer state-of-the-art solar installations that not only help you reduce your electricity bills but also enable you to take advantage of the lucrative 30% tax credit offered by the federal government.</p>
+           <p class="lead">Are you a homeowner or business owner in California looking to harness the power of solar energy while saving money? Look no further! At California Solar Group, we offer state-of-the-art solar installations that not only help you reduce your electricity bills but also enable you to take advantage of the lucrative 30% tax credit offered by the federal government.</p>
 
            <h3 class="mt-5">How Does the 30% Tax Credit Work?</h3>
 
-           <p>The federal government provides a 30% tax credit for qualified solar energy systems installed in residential and commercial properties. This means that if you invest in solar panels through [Company Name], you can deduct 30% of the installation cost directly from your federal taxes. It's a substantial incentive that makes solar installations in California more affordable than ever before.</p>
+           <p>The federal government provides a 30% tax credit for qualified solar energy systems installed in residential and commercial properties. This means that if you invest in solar panels through California Solar Group, you can deduct 30% of the installation cost directly from your federal taxes. It's a substantial incentive that makes solar installations in California more affordable than ever before.</p>
 
-           <h3 class="mt-5">Why Choose [Company Name] for Your Solar Installation?</h3>
+           <h3 class="mt-5">Why Choose California Solar Group for Your Solar Installation?</h3>
 
-           <p>At [Company Name], we have a proven track record of helping homeowners and businesses in California go solar while maximizing their financial benefits. By partnering with us, you'll not only receive expert guidance throughout the installation process but also gain access to our extensive knowledge of tax credits and incentives, ensuring you take full advantage of the 30% tax credit for your solar investment.</p>
+           <p>At California Solar Group, we have a proven track record of helping homeowners and businesses in California go solar while maximizing their financial benefits. By partnering with us, you'll not only receive expert guidance throughout the installation process but also gain access to our extensive knowledge of tax credits and incentives, ensuring you take full advantage of the 30% tax credit for your solar investment.</p>
 
            <h3 class="mt-5">The Benefits of Going Solar in California</h3>
 
@@ -113,7 +113,7 @@
 
            <h3 class="mt-5">Contact Us Today to Unlock the 30% Tax Credit!</h3>
 
-           <p>Ready to take advantage of the 30% tax credit for solar installations in California? Contact [Company Name] today for a free consultation. Our team of experts will guide you through the entire process, from system design and installation to maximizing your tax credit benefits. Join the solar revolution and start saving with [Company Name] now!</p>
+           <p>Ready to take advantage of the 30% tax credit for solar installations in California? Contact California Solar Group today for a free consultation. Our team of experts will guide you through the entire process, from system design and installation to maximizing your tax credit benefits. Join the solar revolution and start saving with California Solar Group now!</p>
 
       </div>
     </section>
