--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -140,7 +140,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
-            <h3><a href="">3-4% Increased Home Value</a></h3>
+            <h3><a href="increased_home_value.html">3-4% Increased Home Value</a></h3>
           </div>
         </div>
       </div>
