--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -328,7 +328,6 @@
 
         <div class="text-center">
           <h3>
-
             Get Your Free Quote for a Brighter, Greener Future!
             </h3>
           <p>
@@ -734,7 +733,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" id="image_4" class="img-fluid" alt="">
+                <img src="assets/img/team/team-4.png" id="image_4" class="img-fluid" alt="">
                 <script>
                   var image4 = document.getElementById("image_4");
 
@@ -743,7 +742,7 @@
                   });
 
                   image4.addEventListener("mouseout", function() {
-                    image4.src = "assets/img/team/team-4.jpg";
+                    image4.src = "assets/img/team/team-4.png";
                   });
                 </script>
                 <div class="social">
@@ -754,7 +753,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Tigran Ter Avetisyan</h4>
+                <h4>To Be Determined (Hiring)</h4>
                 <span>Installation department</span>
               </div>
             </div>
