--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -260,7 +260,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Solar Consultation</a></h4>
+              <h4><a href="solar_onsultation.html">Solar Consultation</a></h4>
               <p>
                 This service includes a thorough evaluation of the customer's energy needs, site assessment, and solar potential. They provide customized solar system recommendations based on the customer's unique requirements, budget, and preferences.
               </p>
