--- a/ROOT/solar_system_design.html
+++ b/ROOT/solar_system_design.html
@@ -76,10 +76,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Design and Consultation</h2>
+          <h2>Solar System Design</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Design and Consultation</li>
+            <li>Solar System Design</li>
           </ol>
         </div>
 
@@ -88,40 +88,28 @@
 
     <section class="inner-page">
       <div class="container">
-        <p>
-          <h1>Expert Solar Design and Consultation Services in California</h1>
-<p>Welcome to California Solar Group, your trusted partner for professional solar design and consultation services in California. Our dedicated team of solar experts is committed to helping you harness the power of the sun and maximize your energy savings. With our comprehensive design and consultation services, we ensure that your solar system is tailor-made to meet your specific requirements. Discover how our expertise can transform your energy consumption and lower your carbon footprint.</p>
-
-<h2>Why Choose California Solar Group for Solar Design and Consultation?</h2>
-
-<ol>
-  <li>
-    <strong>Personalized Approach:</strong>
-    <p>At California Solar Group, we believe that every solar project is unique. Our experienced consultants work closely with you to understand your energy goals, budget, and site specifications. We then design a solar system that maximizes efficiency and delivers optimal performance for your property.</p>
-  </li>
-  <li>
-    <strong>Extensive Experience:</strong>
-    <p>With years of experience in the solar industry, our team has successfully completed numerous projects across California. We stay up-to-date with the latest industry trends and regulations, ensuring that our designs comply with all local and state requirements. Trust us to handle every aspect of your solar design and consultation with precision and expertise.</p>
-  </li>
-  <li>
-    <strong>Cutting-Edge Technology:</strong>
-    <p>We utilize advanced software and tools to create accurate solar designs and performance projections. Our team stays at the forefront of solar technology advancements, enabling us to recommend the most efficient and reliable components for your system. Rest assured, we deliver top-of-the-line solutions that maximize your return on investment.</p>
-  </li>
-  <li>
-    <strong>Cost-Effective Solutions:</strong>
-    <p>At California Solar Group, we understand the importance of cost-effectiveness. Our team meticulously analyzes your energy consumption patterns and financial goals to design a solar system that offers the best long-term savings. We strive to provide you with an optimal balance between upfront costs and long-term benefits.</p>
-  </li>
-  <li>
-    <strong>Seamless Project Execution:</strong>
-    <p>From the initial consultation to the final installation, our team ensures a smooth and hassle-free experience. We handle all the necessary permits, paperwork, and coordination with utility companies, so you can sit back and relax while we bring your solar vision to life.</p>
-  </li>
-</ol>
-
-<h3>Contact California Solar Group Today!</h3>
-
-<p>Ready to take the first step towards a greener future? Contact California Solar Group today to schedule a consultation with our solar design and consultation experts. We are dedicated to helping you make informed decisions and guiding you through every stage of the solar adoption process. Let us design a solar system that maximizes your energy savings and contributes to a sustainable tomorrow.</p>
-
-        </p>
+        <section id="solar-design" class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h2 class="mb-4">Solar System Design</h2>
+              <p class="lead">At California Solar Group, we offer comprehensive solar system design services tailored to meet your specific energy needs. Our team of experienced engineers and designers will work closely with you to create a customized solar solution that maximizes efficiency and cost-effectiveness.</p>
+              <p>Whether you are a homeowner, business owner, or part of a larger organization, our solar system design experts will take into account various factors such as your location, energy consumption patterns, available roof or ground space, and budget to create a system that suits your requirements.</p>
+              <p>Our solar system design process involves:</p>
+              <ul>
+                <li>Evaluating your energy needs and goals</li>
+                <li>Conducting a site assessment to determine the optimal system size and placement</li>
+                <li>Designing a solar array that maximizes energy production</li>
+                <li>Selecting high-quality solar panels, inverters, and other components</li>
+                <li>Ensuring compliance with local building codes and regulations</li>
+                <li>Providing detailed system specifications and a comprehensive quote</li>
+              </ul>
+              <p>With our state-of-the-art design tools and industry expertise, we aim to deliver solar systems that not only reduce your carbon footprint but also generate significant energy savings over the long term.</p>
+            </div>
+            <div class="col-md-6">
+              <img src="solar-design-image.jpg" alt="Solar System Design" class="img-fluid">
+            </div>
+          </div>
+        </section>        
       </div>
     </section>
 
