--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -270,7 +270,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="design_and_consultation.html">Solar System Design</a></h4>
+              <h4><a href="solar_system_design.html">Solar System Design</a></h4>
               <p>
                 The company's team of engineers and designers develop detailed solar system designs, ensuring that the system meets both the customer's energy needs and local building regulations. The design process includes component selection, layout planning, and shading analysis to maximize system performance.
               </p>
@@ -280,7 +280,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Solar Installations</a></h4>
+              <h4><a href="solar_installations.html">Solar Installations</a></h4>
               <p>
                 California Solar Group's team of certified and experienced installers ensure that the solar systems are installed safely, efficiently, and according to the highest industry standards. They handle all aspects of the installation process, from permitting to system commissioning.
               </p>
