--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -290,7 +290,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Solar Financing</a></h4>
+              <h4><a href="solar_maintenance_and_monitoring.html">Solar Financing</a></h4>
               <p>
                 The company offers various financing options to make solar energy more accessible to their customers. They can help clients navigate through solar incentives, rebates, and tax credits, as well as providing flexible payment plans and competitive solar loan options.
               </p>
@@ -300,7 +300,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Solar Maintenance and Monitoring</a></h4>
+              <h4><a href="solar_maintenance_and_monitoring.html">Solar Maintenance and Monitoring</a></h4>
               <p>
                 To ensure optimal system performance and longevity, California Solar Group offers comprehensive maintenance and monitoring services. These services include routine system checks, performance monitoring, and addressing any potential issues that may arise over the system's lifespan.
               </p>
@@ -310,7 +310,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Commercial Solar Solutions</a></h4>
+              <h4><a href="commercial_solar_solutions.html">Commercial Solar Solutions</a></h4>
               <p>
                 California Solar Group also caters to the unique energy needs of commercial customers. They offer customized solar solutions for businesses of all sizes, from small retail shops to large industrial facilities, helping them reduce energy costs and achieve their sustainability goals.
               </p>
