--- a/ROOT/commercial_solar_solutions.html
+++ b/ROOT/commercial_solar_solutions.html
@@ -88,6 +88,29 @@
 
     <section class="inner-page">
       <div class="container">
+        <p>Welcome to California Solar Group, your trusted partner for commercial solar solutions in California. We specialize in designing, installing, and maintaining solar energy systems for businesses of all sizes. With our expertise and cutting-edge technology, we help businesses reduce energy costs, decrease their carbon footprint, and increase their overall sustainability.</p>
+        <h2>Why Choose California Solar Group for Your Commercial Solar Needs?</h2>
+        <p>When it comes to commercial solar solutions, we are the experts. Here are some reasons why businesses choose California Solar Group:</p>
+        <ul>
+          <li><strong>Experience:</strong> With over a decade of experience in the solar industry, we have successfully completed numerous commercial solar projects. Our team of skilled professionals understands the unique requirements of businesses and can tailor solutions to meet your specific needs.</li>
+          <li><strong>Customized Solutions:</strong> We recognize that every business is different. That's why we offer customized solar solutions that are designed to maximize energy production and financial returns for your specific commercial property. Our team will assess your energy needs, site conditions, and budget to create a tailored solar system that fits your business perfectly.</li>
+          <li><strong>Quality Products:</strong> We only work with trusted manufacturers and suppliers to ensure the highest quality solar panels, inverters, and other components for your commercial solar system. Our products are durable, reliable, and backed by warranties, giving you peace of mind for years to come.</li>
+          <li><strong>Professional Installation:</strong> Our team of certified installers follows industry best practices to install your commercial solar system efficiently and safely. We handle all aspects of the installation process, from acquiring permits to system commissioning, ensuring a hassle-free experience for you.</li>
+          <li><strong>Ongoing Maintenance and Support:</strong> We offer comprehensive maintenance plans to keep your commercial solar system running optimally. Our team will regularly inspect and maintain your system, ensuring its performance and longevity. In case of any issues, our dedicated support team is available to provide timely assistance.</li>
+        </ul>
+
+        <h2>Our Commercial Solar Services</h2>
+        <p>At California Solar Group, we provide a wide range of commercial solar services, including:</p>
+        <ul>
+          <li><strong>Solar System Design:</strong> Our experts will design a customized solar system that maximizes energy production and fits your business requirements.</li>
+          <li><strong>Solar Panel Installation:</strong> We handle the installation process from start to finish, ensuring a seamless transition to solar energy.</li>
+          <li><strong>System Integration:</strong> We integrate your solar system with your existing infrastructure to optimize energy usage and savings.</li>
+          <li><strong>Energy Monitoring:</strong> Our advanced monitoring systems allow you to track the performance of your commercial solar system in real-time.</li>
+          <li><strong>Maintenance and Repairs:</strong> We offer regular maintenance services and prompt repairs to ensure your solar system operates at peak efficiency.</li>
+          <li><strong>Financial Analysis:</strong> Our team can provide financial analysis and assistance in leveraging available incentives and tax credits to maximize your return on investment.</li>
+        </ul>
+
+        <p>Take the first step towards a greener future and lower energy costs for your business. Contact California
         
       </div>
     </section>
