--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -107,6 +107,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
+      <a class="nav-link scrollto" href="tel:888045950">(888) 804-5950</a>
       <a href="signup.jsp" class="get-started-btn scrollto">Get Started</a>
 
     </div>
