--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -106,8 +106,9 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
-      <a class="nav-link" href="tel:888045950">(888) 804-5950</a>
+      <ul>
+      <li><a class="nav-link scrollto" href="tel:888045950">(888) 804-5950</a></li>
+      </ul>
       <a href="signup.jsp" class="get-started-btn scrollto">Get Started</a>
 
     </div>
