--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -332,7 +332,7 @@
           <p>
            Discover the benefits of solar energy with California Solar Group. Request a free quote for solar panel installation, tailored financing options, and expert guidance. Save money, reduce your carbon footprint, and enjoy clean, renewable power. #CaliforniaSolarGroup #FreeQuote #SolarPanels #CleanEnergy
           </p>
-          <a class="cta-btn" href="#">Get Quote</a>
+          <a class="cta-btn" href="get_quote.html">Get Quote</a>
         </div>
 
       </div>
