--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -88,6 +88,7 @@
 
     <section class="inner-page">
       <div class="container">
+        <h1 class="mt-5">Solar Installation Price Quote</h1>
         <form action="submit_quote.php" method="post" class="mt-4">
           <div class="form-group">
             <label for="name">Your Name:</label>
@@ -132,7 +133,7 @@
           </div>
 
           <button type="submit" class="btn btn-primary">Submit</button>
-        </form>        
+        </form>
       </div>
     </section>
 
