--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -90,27 +90,27 @@
       <div class="container">
         <h1 class="mt-5">Solar Installation Price Quote</h1>
         <form action="submit_quote.php" method="post" class="mt-4">
-          <div class="form-group">
+          <div class="form-group mt-4">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" class="form-control" required>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-4">
             <label for="email">Your Email:</label>
             <input type="email" id="email" name="email" class="form-control" required>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-4">
             <label for="phone">Your Phone Number:</label>
             <input type="tel" id="phone" name="phone" class="form-control" required>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-4">
             <label for="address">Installation Address:</label>
             <input type="text" id="address" name="address" class="form-control" required>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-4">
             <label for="roof_type">Roof Type:</label>
             <select id="roof_type" name="roof_type" class="form-control" required>
               <option value="">Select Roof Type</option>
@@ -122,17 +122,17 @@
             </select>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-4">
             <label for="energy_usage">Average Monthly Energy Usage (kWh):</label>
             <input type="number" id="energy_usage" name="energy_usage" class="form-control" required>
           </div>
 
-          <div class="form-group">
+          <div class="form-group mt-4">
             <label for="message">Additional Message:</label>
             <textarea id="message" name="message" rows="4" class="form-control"></textarea>
           </div>
 
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary mt-4">Submit</button>
         </form>
       </div>
     </section>
