--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -918,11 +918,11 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Installations</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Financing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Maintenance and Monitoring</a></li>
             </ul>
           </div>
           <a name="subscribe"
