--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -289,7 +289,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="solar_maintenance_and_monitoring.html">Solar Financing</a></h4>
+              <h4><a href="solar_financing.html">Solar Financing</a></h4>
               <p>
                 The company offers various financing options to make solar energy more accessible to their customers. They can help clients navigate through solar incentives, rebates, and tax credits, as well as providing flexible payment plans and competitive solar loan options.
               </p>
@@ -921,8 +921,8 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Consultation</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Installations</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Financing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Maintenance and Monitoring</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="">Financing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_maintenance_and_monitoring.html">Maintenance and Monitoring</a></li>
             </ul>
           </div>
           <a name="subscribe"
