--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -918,10 +918,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Consultation</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Installations</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="">Financing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_consultation.html">Consultation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_system_design.html">Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_installations.html">Installations</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="solar_financing.html">Financing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="solar_maintenance_and_monitoring.html">Maintenance and Monitoring</a></li>
             </ul>
           </div>
