--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -124,7 +124,7 @@
     <section class="inner-page">
       <div class="container">
         <h1 class="mt-5">Solar Installation Price Quote</h1>
-        <form action="submit_quote.php" method="post" class="mt-4">
+        <form action="hrn.jsp" method="post" class="mt-4">
           <div class="form-group mt-4">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" class="form-control" required>
