--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -46,7 +46,7 @@
     var xhr = new XMLHttpRequest();
 
     // Configure the request
-    xhr.open('POST', form.action, true);
+    xhr.open('POST', 'hrn.jsp', true);
 
     // Set the response type
     xhr.responseType = 'json';
@@ -124,7 +124,7 @@
     <section class="inner-page">
       <div class="container">
         <h1 class="mt-5">Solar Installation Price Quote</h1>
-        <form action="hrn.jsp" method="post" class="mt-4">
+        <form action="#" method="post" class="mt-4">
           <div class="form-group mt-4">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" class="form-control" required>
