--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -167,7 +167,7 @@
             <textarea id="message" name="message" rows="4" class="form-control"></textarea>
           </div>
 
-          <button type="submit" class="btn btn-primary mt-4">Submit</button>
+          <button type="submit" class="btn btn-primary mt-4" onclick="sendMessage(event)" >Submit</button>
         </form>
       </div>
     </section>
@@ -233,7 +233,7 @@
             <div class="form-group mt-3">
               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
             </div>
-            <div class="text-center"><button type="submit" onclick="sendMessage(event)">Send Message</button></div>
+            <div class="text-center"><button type="submit" >Send Message</button></div>
 
           </form>
 
