--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -124,7 +124,7 @@
     <section class="inner-page">
       <div class="container">
         <h1 class="mt-5">Solar Installation Price Quote</h1>
-        <form action="#" method="post" class="mt-4">
+        <form action="#" method="post" class="mt-4" id="quoteform" name="quoteform" >
           <div class="form-group mt-4">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" class="form-control" required>
@@ -217,7 +217,7 @@
 
         <div class="col-lg-8 mt-5 mt-lg-0">
 
-          <form action="hrn.jsp" method="post" role="form" id="quoteform" name="quoteform" class="php-email-form">
+          <form action="hrn.jsp" method="post" role="form" class="php-email-form">
             <input type="hidden" name="apiAction" id="apiAction"  value="addQuote" >
             <div class="row">
               <div class="col-md-6 form-group">
