--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -138,8 +138,7 @@
         </div>
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
-            <i class="ri-dollar-line"></i>
-
+            <i class="ri-money-dollar-circle-line"></i>
             <h3><a href="increased_home_value.html">3-4% Increased Home Value</a></h3>
           </div>
         </div>
