--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -125,6 +125,8 @@
       <div class="container">
         <h1 class="mt-5">Solar Installation Price Quote</h1>
         <form action="#" method="post" class="mt-4" id="quoteform" name="quoteform" >
+          <input type="hidden" name="apiAction" id="apiAction"  value="addQuote" >
+
           <div class="form-group mt-4">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" class="form-control" required>
