--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -40,7 +40,7 @@
 
     // Get the form data
     var form = document.getElementById('quoteform');
-    
+
     var formData = new URLSearchParams(new FormData(this)).toString();
 
     // Create an XMLHttpRequest object
@@ -59,7 +59,7 @@
         alert('Form submitted successfully!');
 
         // Reset the form
-        form.reset();
+        //form.reset();
       } else {
         // Display error message
         alert('Error submitting form. Please try again.');
