--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -70,7 +70,7 @@
           alert('Form submitted successfully!\nResponse: ' + response);
 
           // Reset the form
-          form.reset();
+          //form.reset();
         } else {
           // Display error message
           alert('Error submitting form. Please try again.');
