--- a/ROOT/get_quote.html
+++ b/ROOT/get_quote.html
@@ -52,7 +52,7 @@
 
       // Create a URL with the search parameters
       var url = 'hrn.jsp?' + searchParams.toString();
-
+      alert(url);
       // Create an XMLHttpRequest object
       var xhr = new XMLHttpRequest();
 
